--- a/styles/main.sass
+++ b/styles/main.sass
@@ -1,10 +1,25 @@
 @import "templates/_vars.sass"
 
+*
+  outline: none
+
 body
   background-color: $main_bg
   font-family: 'Roboto Condensed', sans-serif
   margin: 0
 
+ul
+  list-style: none
+  padding-left: 0
+
+a
+  color: black
+  text-decoration: none
+  &:hover
+    opacity: .6
+
 .container
   width: 95%
   margin: 0 auto
+
+
