Login page and preloader added

--- a/styles/sidebar.sass
+++ b/styles/sidebar.sass
@@ -3,7 +3,7 @@
 .sidebar
   width: $sidebar_w
   min-height: 100vh
-  background-color: $sidebar_bg
+  background-color: $dark_bg
   .sidebar_head
     padding: 20px 10px 10px
     display: flex
@@ -27,7 +27,7 @@
       font-size: 42px
       letter-spacing: 10px
       font-weight: bold
-      color: white
+      color: $candy_green
       max-width: 100px
       width: 100px
   nav.sidebar_navigation
