--- a/styles/templates/_vars.sass
+++ b/styles/templates/_vars.sass
@@ -1,9 +1,11 @@
 //colors
 
 $main_bg: #fefefe
-$sidebar_bg: #303641
+$dark_bg: #303641
 $no_red: #E03A3E 
 $yes_green: #3f9f31
+$candy_green: #47A38C
+
 // vars
 
 $sidebar_w: 280px
