--- a/styles/templates/form.sass
+++ b/styles/templates/form.sass
@@ -1,5 +1,28 @@
 @import "templates/_vars.sass"
 
 form
+  max-width: 100%
+  display: flex
+  flex-direction: column
+  justify-content: center
+  align-items: center
   input
+    width: 100%
+    border: none
+    margin-top: 15px
+    font-size: 15px
+    letter-spacing: 1px
+    padding: 8px
+    background: transparent
+    border-bottom: 1px solid #aaa
+  input[type="submit"]
+    border: none
+    cursor: pointer
+    color: #efefef
+    padding: 10px
+    margin-top: 40px
+    background-color: $candy_green
+
+
+
   
